--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-cookie": "^1.1.4",
+    "vue-gtag": "^1.16.1",
+    "vue-intercom": "^1.0.14",
+    "vue-resource": "^1.5.3",
+    "vue-underscore": "^0.1.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
